# pluribus

./: .gitignore  PRD_DECISIONS.md  PROGRESS.md  main.py  pyproject.toml  setup.py
example_bots/python/: random_bot.py
pluribus_ri/: __init__.py  analyze_abstraction.py  bench_runtime_search.py  evaluate_blueprints.py  train_blueprint.py
pluribus_ri/abstraction/: __init__.py  _action_kernels.pyx  _py_action_kernels.py  _py_state_indexer_kernels.py  _state_indexer_kernels.pyx  action_kernels.py  game_builder.py  infoset.py  metrics.py  state_indexer.py  state_indexer_kernels.py  tables.py
pluribus_ri/blueprint/: __init__.py  evaluation.py  policy.py
pluribus_ri/core/: __init__.py  _engine_kernels.pyx  _py_engine_kernels.py  engine.py  engine_kernels.py
pluribus_ri/runtime_search/: __init__.py  action_translation.py  beliefs.py  benchmark.py  continuation.py  nested_search.py  public_root.py  stopping.py
pluribus_ri/solver/: __init__.py  _cykernels.pyx  (+5 more)
tests/: test_abstract_game_builder.py  test_abstraction.py  test_abstraction_metrics.py  test_abstraction_tables.py  test_action_kernels.py  test_blueprint_evaluation.py  test_blueprint_policy.py  test_core_verification.py  test_engine.py  test_engine_kernels.py  test_nested_search.py  test_nlth_game.py  test_runtime_phase3_components.py  test_runtime_search.py  test_runtime_search_benchmark.py  test_runtime_search_properties.py  test_runtime_search_regression.py  test_solver.py  test_solver_kernels.py  test_state_indexer.py  test_state_indexer_kernels.py  test_training_runner.py  test_training_snapshots.py
(+5 files in other folders)
